fixed spacing porblems on card

--- a/style.css
+++ b/style.css
@@ -4,10 +4,19 @@
      margin:0 0 0 0;
    }
 
-   h1{
-     padding-left:100px;
+   html{
+     min-width: 700px;
+   }
+   h1{  
+     height:50px;
+     width:100%;
      font-family: 'Open Sans', sans-serif;
      font-size:50px;
+   }
+   span{
+     width:100%;
+     height:100%;
+     display:flex;
    }
    #matnav{
     font-family: 'Open Sans', sans-serif;
@@ -77,8 +86,8 @@
    .card {
     /*border-right:30px #252C3F solid;*/
     margin: 50px 0 0 0;
+    padding-left:50px;
     display:flex;
-    flex-wrap: none;
     flex-flow:column;
     justify-content: center;
     font-family: 'Open Sans', sans-serif;
@@ -92,18 +101,19 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
   #tasktitle{
-    width:150%;
+    width:75%;
+    margin: auto 0;
+    position:relative;
     height:50px;
     font-size: 30px;
   }
   #submit{
-    align-content: center;
+    display:flex;
+    margin: auto 0;
     width:50px;
-    margin-left:50px;
     height:50px;
     background-color:#a9cea1;
     color:white;
-    display:flex;
     align-items: center;
     justify-content: center;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -113,4 +123,17 @@
     background-color:white;
     cursor:pointer;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+  .checkmark{
+    height:50px;
+    margin:0;
+  }
+  .blacksquare{
+    float:right;
+    display:flex;
+    justify-content: space-around;
+    width:5%;
+    height:100%;
+    background-color:#252C3F;
+    margin-left: auto;
   }
